service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vlad-test-service
spec:
  selector:
    app: vlad-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
