ingress-gcp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.org/client-max-body-size: "0"
  name: planningservice
spec:
  rules:
    - host: transportation-prod.cf-transporta-live-79.cf.metro.cloud
      http:
        paths:
          - backend:
              service:
                name: vlad-test-service
                port:
                  number: 80
            path: /transportation.vladtest.v1(/|$)(.*)
            pathType: Prefix
